--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@
   --icon-bg-cl: rgba(255, 255, 255, 0.1);
   --cust-bg-cl: #f5f5f5;
 
-
   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   /* Others */
@@ -61,12 +60,12 @@ img {
   text-decoration: none;
 }
 
-.header-list,
-.contacts-list,
+.nav__list,
+.header__list,
 .footer-list,
 .section-team-list,
-.hero-list,
-.content-list,
+.aside__list,
+.preview__list,
 .section-list,
 .portfolio-list,
 .socials-list,
@@ -83,135 +82,7 @@ img {
   margin-left: auto;
   margin-right: auto;
 
-  /* outline: 2px solid red; */
-
 }
-
-
-
-/* HEADER */
-
-.header {
-  background-color: var(--main-bg-cl);
-  border-bottom: 1px solid #ECECEC;
-}
-
-.header-container {
-  display: flex;
-}
-
-.nav {
-  margin-right: auto;
-}
-
-.nav-link {
-  color: var(--main-txt-cl);
-  padding: 32px 0;
-  display: block;
-
-}
-
-.contacts-header-link {
-  display: block;
-  color: var(--grey-txt-cl);
-  padding: 32px 0;
-}
-
-.header-list {
-  display: flex;
-  gap: 50px;
-}
-
-.contacts-list {
-  display: flex;
-  gap: 50px;
-  align-items: center;
-  font-weight: 500;
-}
-
-.header-item {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  letter-spacing: 0.02em;
-  color: var(--main-txt-cl);
-}
-
-.link.current {
-  color: var(--accent-txt-cl);
-}
-
-.header .link {
-  transition: color var(--animation);
-}
-
-.header .link:hover,
-.header .link:focus {
-  color: var(--accent-txt-cl);
-}
-
-.logo-header {
-  font-family: var(--secondary-font);
-  font-weight: 700;
-  font-size: 26px;
-  line-height: calc(31 / 26);
-  color: var(--accent-txt-cl);
-  text-decoration: none;
-  padding: 24px 0;
-  margin-right: 93px;
-}
-
-
-.header .logo-part {
-  color: var(--logo-txt-cl);
-}
-
-
-.contacts-list .link {
-  color: var(--grey-txt-cl);
-}
-
-.contacts-icon {
-  fill: currentColor;
-  stroke: var(--grey-txt-cl);
-
-  transition: fill var(--animation);
-}
-
-.contacts-icon:hover,
-.contacts-icon:focus {
-  fill: var(--accent-bg-cl);
-}
-
-
-
-.contacts-header-link.link {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.header-item {
-  position: relative;
-}
-
-
-.nav-link.link.current::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -3%;
-  display: inline-block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-txt-cl);
-  border-radius: 4px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-
-/* HERO */
 
 .visually-hidden {
   position: absolute;
@@ -225,6 +96,137 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+
+
+/* HEADER */
+
+.header {
+  background-color: var(--main-bg-cl);
+  border-bottom: 1px solid #ECECEC;
+}
+
+.header__container {
+  display: flex;
+}
+
+
+.header__link {
+  display: block;
+  color: var(--grey-txt-cl);
+  padding: 32px 0;
+}
+
+
+.header__list {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  font-weight: 500;
+}
+
+.header .link {
+  transition: color var(--animation);
+}
+
+.header .link:hover,
+.header .link:focus {
+  color: var(--accent-txt-cl);
+}
+
+.header__list .link {
+  color: var(--grey-txt-cl);
+}
+
+.header__link.link {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+
+/* Navigation */
+
+
+.nav {
+  margin-right: auto;
+}
+
+.nav__link {
+  color: var(--main-txt-cl);
+  padding: 32px 0;
+  display: block;
+
+}
+.nav__list {
+  display: flex;
+  gap: 50px;
+}
+
+.nav__item {
+  position: relative;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.02em;
+  color: var(--main-txt-cl);
+}
+
+
+.nav__link--current::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -3%;
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-txt-cl);
+  border-radius: 4px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.nav__link--current {
+  color: var(--accent-txt-cl);
+}
+
+
+/* logo */
+
+
+.logo {
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: calc(31 / 26);
+  color: var(--accent-txt-cl);
+  text-decoration: none;
+  padding: 24px 0;
+  margin-right: 93px;
+}
+
+
+.logo__dark {
+  color: var(--logo-txt-cl);
+}
+
+
+.header__icon {
+  fill: currentColor;
+  stroke: var(--grey-txt-cl);
+
+  transition: fill var(--animation);
+}
+
+.header__icon:hover,
+.header__icon:focus {
+  fill: var(--accent-bg-cl);
+}
+
+
+
+/* HERO */
 
 .hero {
   background-color: var(--dark-bg-cl);
@@ -240,11 +242,13 @@ img {
   background-size: cover;
 }
 
-.hero-container {
+
+.hero__container {
   width: 696px;
 }
 
-.hero-title {
+
+.hero__title {
   margin-bottom: 30px;
   display: block;
   font-weight: 900;
@@ -256,7 +260,7 @@ img {
   color: var(--main-bg-cl);
 }
 
-.hero-btn {
+.hero__btn {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -276,31 +280,34 @@ img {
   transition: background-color var(--animation);
 }
 
-.hero .hero-btn:hover,
-.hero .hero-btn:focus {
+
+.hero__btn:hover,
+.hero__btn:focus {
   background-color: var(--secondary-bg-cl);
 }
 
+
+
 /* НАШІ ПЕРЕВАГИ */
 
-.hero-list {
+.aside__list {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
 
-.hero-section {
+.aside {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
 
-.hero-item {
+.aside__item {
   width: 270px;
 }
 
 
-.hero-caption {
+.aside__caption {
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
@@ -309,13 +316,13 @@ img {
   color: var(--main-txt-cl);
 }
 
-.hero-subtitle {
+.aside__subtitle {
   font-size: 14px;
   line-height: calc(24 / 14);
   color: var(--grey-txt-cl);
 }
 
-.about-us {
+.aside__img {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -330,8 +337,12 @@ img {
 
 /* НАША РОБОТА */
 
-.content-title {
+.preview {
+  padding-bottom: 94px;
+}
 
+
+.preview__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -340,22 +351,19 @@ img {
   color: var(--main-txt-cl);
 }
 
-.content-list {
+.preview__list {
   display: flex;
   gap: 30px;
   justify-content: center;
 }
 
-.content {
-  padding-bottom: 94px;
-}
 
-.content-item {
+.preview__item {
   position: relative;
 
 }
 
-.overlay-work {
+.preview__overlay {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -364,13 +372,12 @@ img {
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
 
-
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.overlay-name {
+.preview__name {
   font-family: 'Roboto';
   font-size: 14px;
   line-height: calc(16 / 14);
